# python-zeep

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  .travis.yml  =0.15.0  CHANGES  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  appveyor.yml  codecov.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.azure-pipelines/: job.yml  main.yml  steps.yml
.azure-pipelines/jobs/: test-linux.yml  test-windows.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  support-request.md
.github/workflows/: python-release.yml  python-test.yml
benchmark/: benchmark.wsdl  run_parsing.py
docs/: Makefile  api.rst  attachments.rst  changes.rst  client.rst  conf.py  datastructures.rst  headers.rst  helpers.rst  in-depth.rst  in_depth.rst  index.rst  internals.rst  internals_wsdl.rst  internals_xsd.rst  make.bat  multipart.rst  plugins.rst  reporting_bugs.rst  settings.rst  transport.rst  wsa.rst  wsse.rst
docs/_templates/: sidebar-intro.html
examples/: Makefile  async_client.py  async_example.py  code39.py  echo_services.py  eu_vat_service.py  http_basic_auth.py  km_to_miles.py  soap_server.py  trafficvance_apikey.py
src/zeep/: __init__.py  __main__.py  asyncio.py  cache.py  client.py  docs.py  exceptions.py  helpers.py  loader.py  ns.py  parser.py  plugins.py  proxy.py  settings.py  transport_with_attach.py  transports.py  types.py  utils.py  wsa.py  wsdl.py  xsd.py
src/zeep/asyncio/: __init__.py  bindings.py  plugins.py  transport.py
src/zeep/tornado/: bindings.py  transport.py
src/zeep/wsdl/: __init__.py  attachments.py  base.py  definitions.py  http.py  messages.py  parse.py  soap.py  utils.py  wsa.py  wsdl.py
src/zeep/wsdl/bindings/: __init__.py  http.py  soap.py
src/zeep/wsdl/messages/: __init__.py  base.py  http.py  mime.py  multiref.py  soap.py  xop.py
src/zeep/wsse/: __init__.py  binsectoken.py  signature.py  username.py  utils.py
src/zeep/xsd/: __init__.py  any.py  builtins.py  const.py  constraining_facets.py  context.py  elements.py  indicators.py  parser.py  printer.py  schema.py  types.py  utils.py  valueobjects.py  visitor.py
src/zeep/xsd/elements/: any.py  attribute.py  base.py  builtins.py  element.py  indicators.py  references.py
src/zeep/xsd/types/: any.py  base.py  builtins.py  collection.py  complex.py  facets.py  simple.py  unresolved.py
tests/: __init__.py  conftest.py  public_cert_to_verify_response.crt  test_async_client.py  test_async_transport.py  test_asyncio_transport.py  test_cache.py  test_client.py  test_client_factory.py  test_facets.py  test_helpers.py  test_loader.py  test_main.py  test_mtom_attachment.py  test_multipart.py  test_pprint.py  test_recursive_error.py  test_response.py  test_soap_multiref.py  test_soap_xop.py  test_tornado_transport.py  test_transports.py  test_types.py  test_utils.py  test_wsa.py  test_wsdl.py  test_wsdl_arrays.py  test_wsdl_messages.py  test_wsdl_messages_document.py  test_wsdl_messages_http.py  test_wsdl_messages_rpc.py  test_wsdl_no_output_message_part.py  test_wsdl_soap.py  test_wsdl_wsa.py  test_wsse_binsectoken.py  test_wsse_list.py  test_wsse_signature.py  test_wsse_username.py  test_wsse_utils.py  test_wsse_verify_response.py  (+28 more)
tests/integration/: hello_world_recursive.wsdl  hello_world_recursive_import.wsdl  recursive_schema_a.xsd  recursive_schema_b.xsd  test_hello_world_recursive.py  test_http_post.py  test_http_post.wsdl  test_ims.py  test_recursive_schema.py
tests/integration/mock_ims/: find_customer_by_name_response.xml
tests/integration/wsdl_ims/: inventory.wsdl
tests/responses_examples/: response_signed.xml
tests/wsdl_files/: mtom_attachment.wsdl  mtom_attachment.xsd  sample.wsdl  soap.wsdl  soap_header.wsdl  soap_import_2.wsdl  wsdl_to_verify_response.wsdl
