[project]
name = "zeep"
version = "4.3.1"
description = "A Python SOAP client"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Michael van Tellingen", email = "michaelvantellingen@gmail.com" }
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "attrs>=17.2.0",
    "isodate>=0.5.4",
    "lxml>=4.6.0",
    "platformdirs>=1.4.0",
    "requests>=2.7.0",
    "requests-toolbelt>=0.7.1",
    "requests-file>=1.5.1",
    "pytz",
]

[project.urls]
Repository = "https://github.com/mvantellingen/python-zeep"
Documentation = "https://docs.python-zeep.org"
Changelog = "https://github.com/mvantellingen/python-zeep/blob/main/CHANGES"

[project.optional-dependencies]
docs = ["sphinx>=1.4.0"]
test = [
    "coverage[toml]==7.6.2",
    "freezegun==1.5.1",
    "pretend==1.0.9",
    "pytest-cov==5.0.0",
    "pytest-httpx",
    "pytest-asyncio",
    "pytest==8.3.3",
    "requests_mock==1.12.1",
    # Linting
    "isort==5.13.2",
    "flake8==7.1.1",
    "flake8-blind-except==0.2.1",
    "flake8-debugger==4.1.2",
    "flake8-imports==0.1.1",
]
async = ["httpx>=0.15.0"]
xmlsec = ["xmlsec>=0.6.1"]

[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ["zeep"]

[tool.coverage.paths]
source = ["src", "*/site-packages/"]

[tool.coverage.report]
show_missing = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = ["zeep", "tests"]
use_parentheses = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
markers = [
    # mark a test to allow socket usage
    "requests",
    "network: test case requires network connection",
]

[tool.flake8]
max-line-length = 99
